--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-blog",
+  "homepage": "https://royayo.github.io/blog",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
